--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "Bodhi-server",
+  "name": "bodhi-server",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
