--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
